--- a/app/html/index.html
+++ b/app/html/index.html
@@ -9,6 +9,23 @@
   <link rel="stylesheet" href="bundle.css">
 </head>
 <body>
-  <app-main></app-main>
+  <main>
+    <div class="logo">
+      <div class="logoText">
+        <h1><span>S</span><span class="right-span">S</span>Designs</h1>
+        <p>
+          Lets Make Something Great Together
+        </p>
+      </div>
+      <div class="contactBtns">
+        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+        <a href="https://www.github.com" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+        <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+        <a href="mailto: mattsmith203@hotmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>
+</a>
+
+      </div>
+    </div>
+  </main>
 </body>
 </html>
